--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -5,12 +5,12 @@ parameters:
     level: max
     inferPrivatePropertyTypeFromConstructor: true
     treatPhpDocTypesAsCertain: false
+    reportUnmatchedIgnoredErrors: false
     paths:
         - %currentWorkingDirectory%/src/
     excludePaths:
         - %currentWorkingDirectory%/tests/*
     bootstrapFiles:
         - vendor/php-stubs/wordpress-stubs/wordpress-stubs.php
-        - %currentWorkingDirectory%/comment-moderation.php
     ignoreErrors:
         - '/is never read, only written/'
