--- a/.github/workflows/WP_5_9.yaml
+++ b/.github/workflows/WP_5_9.yaml
@@ -19,7 +19,7 @@ jobs:
         image: 'mysql:5.7'
         env:
           MYSQL_ROOT_PASSWORD: 'crab'
-          MYSQL_DATABASE: pc_core_tests
+          MYSQL_DATABASE: comment-moderation-tests
         ports:
           - 3306:3306
         options: >-
