--- a/composer.json
+++ b/composer.json
@@ -49,6 +49,7 @@
         "coverage": "./vendor/bin/phpunit --coverage-html coverage-report --testdox",
         "analyse": "./vendor/bin/phpstan analyse src -l8",
         "sniff": "./vendor/bin/phpcs src/ -v",
+        "format": "./vendor/bin/phpcbf src/ -v",
         "all": "composer test && composer analyse && composer sniff",
         "internationalize": [
             "@makepot",
